cluster/web/changedetection/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: changedetection
    app.kubernetes.io/version: 0.60.8
  name: changedetection
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: changedetection
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: changedetection
        app.kubernetes.io/version: 0.60.8
    spec:
      automountServiceAccountToken: false
      enableServiceLinks: false
      containers:
      - image: ghcr.io/dgtlmoon/changedetection.io:0.60.8
        name: changedetection
        ports:
        - containerPort: 5000
          name: http
        volumeMounts:
        - mountPath: /datastore
          name: data-volume
        - mountPath: /tmp
          name: tmp-volume
        - mountPath: /app/changedetectionio/static/styles
          name: pennant-volume
          readOnly: true
        resources:
          requests:
            cpu: 25m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
        securityContext:
          capabilities:
            drop:
            - ALL
          runAsUser: 1000
          runAsGroup: 1000
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
      volumes:
      - name: data-volume
        persistentVolumeClaim:
          claimName: changedetection-data-pvc
      - name: tmp-volume
        emptyDir: {}
      - name: pennant-script-volume
        configMap:
          name: changedetection-pennant
      - name: pennant-volume
        emptyDir: {}
      securityContext:
        seccompProfile:
          type: RuntimeDefault
